--- a/overlays/sandbox/kustomization.yaml
+++ b/overlays/sandbox/kustomization.yaml
@@ -8,3 +8,23 @@ resources:
   - ../../base/
   - namespace.yaml
   - secret-hf-token-env.yaml
+
+patchesJson6902:
+  - target:
+      group: build.openshift.io
+      version: v1
+      kind: BuildConfig
+      name: vllm-build
+    patch: |-
+      - op: replace
+        path: /spec/nodeSelector/kubernetes.io~1hostname
+        value: os-wf2-07.cluster1.sandbox284.opentlc.com
+  - target:
+      group: build.openshift.io
+      version: v1
+      kind: BuildConfig
+      name: vllm-build
+    patch: |-
+      - op: replace
+        path: /spec/strategy/dockerStrategy/buildArgs/0/value
+        value: image-registry.openshift-image-registry.svc:5000/sandbox/rocm-pytorch:base
