--- a/bases/deploy/deployment.yaml
+++ b/bases/deploy/deployment.yaml
@@ -47,6 +47,16 @@ spec:
               cpu: 4
               memory: 128Gi
               amd.com/gpu: 1
+          startupProbe:
+            failureThreshold: 90
+            httpGet:
+              path: /health
+              port: 8000
+              scheme: HTTP
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 3
           livenessProbe:
             failureThreshold: 3
             httpGet:
